[gd_scene load_steps=16 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://player.png" type="Texture" id=2]
[ext_resource path="res://tinyfont.fnt" type="BitmapFont" id=3]
[ext_resource path="res://text.gd" type="Script" id=4]
[ext_resource path="res://glitch.shader" type="Shader" id=5]
[ext_resource path="res://pixel.png" type="Texture" id=6]
[ext_resource path="res://transition.shader" type="Shader" id=7]
[ext_resource path="res://camera.gd" type="Script" id=8]

[sub_resource type="GDScript" id=1]

script/source = "extends Label

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass

func _physics_process(_delta):
	self.text = str( Engine.get_frames_per_second() )
"

[sub_resource type="ShaderMaterial" id=2]

shader = ExtResource( 5 )
shader_param/AMT = 0.0
shader_param/SPEED = 0.6

[sub_resource type="ShaderMaterial" id=3]

shader = ExtResource( 7 )
shader_param/fade_level = 0.0

[sub_resource type="Animation" id=4]

tracks/0/type = "value"
tracks/0/path = NodePath("transisionpixel:material:shader_param/fade_level")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=5]

tracks/0/type = "value"
tracks/0/path = NodePath("transisionpixel:material:shader_param/fade_level")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=6]

resource_name = "glitch"
length = 10.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("glitchpixel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("glitchpixel:material:shader_param/AMT")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("transisionpixel:material:shader_param/fade_level")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 10 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 1 ],
"method": "_restart_level"
} ]
}

[sub_resource type="Animation" id=7]

resource_name = "start"
tracks/0/type = "value"
tracks/0/path = NodePath("glitchpixel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("glitchpixel:material:shader_param/AMT")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("glitchpixel:material:shader_param/SPEED")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("transisionpixel:material:shader_param/fade_level")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="levels" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="gui_layer" type="CanvasLayer" parent="."]
layer = 2

[node name="fps_label" type="Label" parent="gui_layer"]
visible = false
margin_top = 166.0
margin_right = 40.0
margin_bottom = 180.0
script = SubResource( 1 )

[node name="gui" type="Node2D" parent="gui_layer"]
__meta__ = {
"_edit_lock_": true
}

[node name="lives" type="Node2D" parent="gui_layer/gui"]
editor/display_folded = true
visible = false
position = Vector2( 136, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="live_1" type="Sprite" parent="gui_layer/gui/lives"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 237, 371, 7, 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="live_2" type="Sprite" parent="gui_layer/gui/lives"]
position = Vector2( 9, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 237, 371, 7, 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="live_3" type="Sprite" parent="gui_layer/gui/lives"]
position = Vector2( 18, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 237, 371, 7, 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="live_4" type="Sprite" parent="gui_layer/gui/lives"]
position = Vector2( 27, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 237, 371, 7, 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="live_5" type="Sprite" parent="gui_layer/gui/lives"]
position = Vector2( 36, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 237, 371, 7, 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="live_6" type="Sprite" parent="gui_layer/gui/lives"]
position = Vector2( 45, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 237, 371, 7, 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="bombs" type="Node2D" parent="gui_layer/gui"]
editor/display_folded = true
position = Vector2( 264, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="bomb_1" type="Sprite" parent="gui_layer/gui/bombs"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 204, 408, 8, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="bomb_2" type="Sprite" parent="gui_layer/gui/bombs"]
position = Vector2( 9, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 204, 408, 8, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="bomb_3" type="Sprite" parent="gui_layer/gui/bombs"]
position = Vector2( 18, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 204, 408, 8, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="bomb_4" type="Sprite" parent="gui_layer/gui/bombs"]
position = Vector2( 27, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 204, 408, 8, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="bomb_5" type="Sprite" parent="gui_layer/gui/bombs"]
position = Vector2( 36, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 204, 408, 8, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="bomb_6" type="Sprite" parent="gui_layer/gui/bombs"]
position = Vector2( 45, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 204, 408, 8, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="bullets" type="Node2D" parent="gui_layer/gui"]
editor/display_folded = true
position = Vector2( 200, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="bullet_1" type="Sprite" parent="gui_layer/gui/bullets"]
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 172, 398, 8, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="bullet_2" type="Sprite" parent="gui_layer/gui/bullets"]
position = Vector2( 9, 0 )
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 172, 398, 8, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="bullet_3" type="Sprite" parent="gui_layer/gui/bullets"]
position = Vector2( 18, 0 )
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 172, 398, 8, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="bullet_4" type="Sprite" parent="gui_layer/gui/bullets"]
position = Vector2( 27, 0 )
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 172, 398, 8, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="bullet_5" type="Sprite" parent="gui_layer/gui/bullets"]
position = Vector2( 36, 0 )
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 172, 398, 8, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="bullet_6" type="Sprite" parent="gui_layer/gui/bullets"]
position = Vector2( 45, 0 )
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 172, 398, 8, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="Label" parent="gui_layer/gui"]
margin_right = 180.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.808594, 0.380213, 0.123184, 1 )
align = 1
valign = 1
uppercase = true
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="text_timer" type="Timer" parent="gui_layer/gui/text"]
one_shot = true

[node name="transition_layer" type="CanvasLayer" parent="."]
layer = 3

[node name="glitchpixel" type="Sprite" parent="transition_layer"]
material = SubResource( 2 )
scale = Vector2( 320, 180 )
texture = ExtResource( 6 )
centered = false

[node name="transisionpixel" type="Sprite" parent="transition_layer"]
material = SubResource( 3 )
scale = Vector2( 320, 180 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="transanim" type="AnimationPlayer" parent="transition_layer"]
autoplay = "start"
playback_speed = 4.0
anims/fade_in = SubResource( 4 )
anims/fade_out = SubResource( 5 )
anims/glitch = SubResource( 6 )
anims/start = SubResource( 7 )

[node name="loadtimer" type="Timer" parent="."]
one_shot = true

[node name="camera" type="Camera2D" parent="."]
current = true
limit_left = 0
smoothing_enabled = true
drag_margin_left = 0.3
drag_margin_top = 0.3
script = ExtResource( 8 )

[node name="music" type="AudioStreamPlayer" parent="."]

[connection signal="text_finished" from="gui_layer/gui/text" to="." method="_on_text_text_finished"]
[connection signal="timeout" from="gui_layer/gui/text/text_timer" to="gui_layer/gui/text" method="_on_text_timer_timeout"]
[connection signal="timeout" from="loadtimer" to="." method="_on_loadtimer_timeout"]
